<resources>
    <string name="app_name">Tipease</string>

    <string name="tipText">Tip</string>
    <string name="taxText">Tax</string>
    <string name="splitText">Split</string>

    <string name="productName">Product</string>
    <string name="pricesDefault">$0.00</string>
    <string name="pricesSplitDefault">0</string>

    <string name="youPay">You Pay</string>
    <string name="eachPay">Each Pay</string>

    <string name="productWindowTextHint">Enter your product amount</string>


    <string name="okay">Okay</string>
    <string name="errorDialogMessage">The Text You\'ve Entered Was Invalid.</string>

    <string name="contentDescForkKnifeImage">Opens A Dialog To Set Your Bill Total</string>
    <string name="contentDescDataToggleImage">Will Switch Your Data Below To Meta Data</string>


    <string name="descriptionText">(Per Person)</string>
    <string name="descriptionTextSplit">(Base Per Person)</string>

    <string name="secondaryValueText">0%</string>
    <string name="secondaryValueTextSplit">0</string>
    <string name="primaryValueText">$0</string>



</resources>
