<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:background="@color/pricesDataBackground"
    android:layout_height="match_parent"
    android:layout_width="match_parent">



<GridLayout
    android:layout_gravity="center"

    android:rowCount="5"
    android:columnCount="3"
    android:orientation="vertical"

    android:paddingLeft="@dimen/gridPaddingHorizontal"
    android:paddingStart="@dimen/gridPaddingHorizontal"
    android:paddingRight="@dimen/gridPaddingHorizontal"
    android:paddingEnd="@dimen/gridPaddingHorizontal"

    android:paddingTop="@dimen/gridPaddingVertical"
    android:paddingBottom="@dimen/gridPaddingVertical"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">



<TextView
    android:layout_row="0"
    android:layout_column="0"

    style="@style/PricesNameStyle"
    android:text="@string/tipText" />

    <TextView
        style="@style/PricesTotalStyle"
        android:id="@id/tipTotal"

        android:layout_row="0"
        android:layout_column="2"/>


    <TextView
    android:layout_columnSpan="2"
    android:layout_row="1"
    android:layout_column="0"
    style="@style/PricesNameStyle"
    android:text="@string/taxText" />

<TextView
    style="@style/PricesTotalStyle"
    android:id="@id/taxTotal"

    android:layout_row="1"
    android:layout_column="2" />



<TextView
    android:layout_row="2"
    android:layout_column="0"
    style="@style/PricesNameStyle"
    android:text="@string/splitText"
    android:layout_width="wrap_content" />

<TextView
    style="@style/PricesTotalStyle"

    android:text="@string/pricesSplitDefault"
    android:id="@id/splitTotal"

    android:layout_row="2"
    android:layout_column="2" />



<TextView
     android:layout_row="3"
     android:layout_column="0"
     style="@style/PricesNameStyle"
     android:text="@string/productName" />

<TextView
    style="@style/PricesTotalStyle"
    android:id="@id/productTotal"

    android:layout_row="3"
    android:layout_column="2" />



<TextView
    android:layout_row="4"
    android:layout_column="0"
    android:id="@id/youPayEachPay"

    style="@style/YouPayTextStyle"/>

<TextView
    style="@style/YouPayTotalStyle"
    android:id="@id/youPayTotal"

    android:layout_row="4"
    android:layout_column="2" />



</GridLayout>



</ScrollView>